@@ -6,7 +6,7 @@
 [KEYWORDS0:R1||R2]
 if elif else endif
 object category protocol module
-encoding export
+encoding export reexport
 info initialization
 public protected private
 dynamic discontiguous multifile
