@@ -62,6 +62,7 @@ end_protocol
 exp
 expand_goal
 expand_term
+export
 extends
 extends_category
 extends_object
@@ -124,6 +125,7 @@ put_char
 put_code
 read
 read_term
+reexport
 rem
 repeat
 retract
