@@ -45,6 +45,8 @@
 			<string>abolish_protocol</string>
 			<string>abolish_category</string>
 			<string>complements_object</string>
+			<string>export</string>
+			<string>reexport</string>
 			<string>extends_object</string>
 			<string>extends_protocol</string>
 			<string>extends_category</string>
