@@ -101,6 +101,7 @@ implements
 alias
 encoding
 export
+reexport
 initialization
 info
 mode
